--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Update gist
         uses: matchai/waka-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 968220c97e8da1d047a9a480fa432e54
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{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}}
+          GIST_ID: 6d5f84419863089a167387da62dd7081
+          WAKATIME_API_KEY: ${{b9656337-4cf0-41ee-b3b7-35463dfa69a4}}
